--- a/Claro/HomeStudent.html
+++ b/Claro/HomeStudent.html
@@ -41,6 +41,23 @@
             <input type="text" placeholder="Search" id="courseSearch">
         </div>
     </div>
+    
+    <!-- Scheduling starts here -->
+    <div class="day" onclick="toggleSchedule('mon')">Monday</div>
+    <div id="mon" class="schedule">9 AM - Team Meeting<br>1 PM - Project Work</div>
+
+    <div class="day" onclick="toggleSchedule('tue')">Tuesday</div>
+    <div id="tue" class="schedule">10 AM - Client Call<br>3 PM - Code Review</div>
+
+    <div class="day" onclick="toggleSchedule('wed')">Wednesday</div>
+    <div id="wed" class="schedule">11 AM - Standup Meeting<br>2 PM - Testing</div>
+
+    <div class="day" onclick="toggleSchedule('thu')">Thursday</div>
+    <div id="thu" class="schedule">9 AM - Design Review<br>4 PM - Team Lunch</div>
+
+    <div class="day" onclick="toggleSchedule('fri')">Friday</div>
+    <div id="fri" class="schedule">10 AM - Retrospective<br>1 PM - Planning</div>
+    
 
     <!-- 
     <div>
